--- a/web-interface/templates/index1.html
+++ b/web-interface/templates/index1.html
@@ -32,7 +32,7 @@
     </div>
 
     <script type="text/javascript" charset="utf-8">
-        var socket = io.connect(window.location.protocol + '//' + document.domain + ':' + location.port);
+        var socket = io.connect('https://dbj-internship.herokuapp.com/');
         socket.on('connect', function(){
             console.log("Connected...!", socket.connected)
         });
