--- a/web-interface/templates/index.html
+++ b/web-interface/templates/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <script type="text/javascript" charset="utf-8">
-        var socket = io.connect('http://' + document.domain + ':' + location.port);
+        var socket = io.connect('https://' + document.domain + ':' + location.port);
         socket.on('connect', function(){
             console.log("Connected...!", socket.connected)
         });
